fixed non-collapsing nav

--- a/docs/bootstrap.css
+++ b/docs/bootstrap.css
@@ -496,7 +496,8 @@ mark,
 }
 
 .figure-img {
-  margin-bottom: 0.5rem;
+  padding: 0.25rem;
+  margin: 0.5rem;
   line-height: 1;
 }
 
